--- a/ansible/inventory/kube/host_vars/k3s-02.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-02.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:lMuCcuCc,iv:GtreiOYy5q1XPo3Z9ATBtXkUScePfDi/6PP+WqroBwY=,tag:UClXvjX4tJijuA1sGJhLbQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:YU5t0Lrd,iv:9rY4CsvED/y7AfogaR5MwYctYLIEDK8pa2UTx7f/Mz8=,tag:2Sc7QGbQMpPJuEHH0/ZWnA==,type:str]
+kind: ENC[AES256_GCM,data:OyNOmDLy,iv:wVsQP+HImrHPiLcmVdqd9tFS1qA/wRxvk2HcgbmqhyY=,tag:YIV7qfAVb3Kf442gb839kg==,type:str]
+ansible_user: ENC[AES256_GCM,data:29l9/4Fj,iv:3sJkGpeBs8kVuDhYYbz/uTN9SCSEUi0QBfTHPIrVnso=,tag:VjHMfwlAo4EwxWOBMtuckg==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBkOVhsMVNDelJiQitZZ2R0
-            d3hlY1FZd2prNEpSRGtLa1R3S0I3bVlZc1JVClNhOUs5UDZTVWp0alo3dGlmcE9q
-            OWZrdmpyLzNlMU1TYmRkSnZlamhsdUkKLS0tIGFjR1J0SC9ROG1OTlcycTJXZlB0
-            eUx6SkFxL3Y0ZDg1VXpsalNlN0hKQ2MKlvxL3Rip/iu+HWV8fslSQz51l/Gltu5C
-            G7rXbxtoDDVHr0p7ZyTkbF3q1EFt3/gICzcwiPeccnblmtjxbfZGiA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBBOUthRE5yOTVhRkJ5dytN
+            V0VoalZKTWJrQTVsamIybnBIWElmTk5sSFY0CkVXVTlrdWxCbzVia3RRWndzWUx4
+            cEFUdnp1MTVrdzFXc2srYnA0MDFqN00KLS0tIE1RenFsdjZuL1RmbWhmY2lGdzlE
+            NXkwbndiK3J3MTJyTkV1SitLU3NnOWcKDbVUPimqY8p8gxpsbqqqd4sH1ZXTL+aW
+            DdUhYMwAE7759Xfw/I0IctLFYCdioThR/fnzJ5+QiuxF1KORfKck+w==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-03T00:57:56Z"
-    mac: ENC[AES256_GCM,data:86tcVnBDuMG5x8Wpie7LTzHkc6vxYYwssUa85tSDRH6nhSLSQLLYXIQHmcW3SbJLPSkvkna1cAXM3TuzBh+F1Dd7b1vETHmK7YhwhaTNA/bfVquPDKGy7w2RQ425WsLF+b41Egn01Ij9PGKNDqB9pZlh/slcYnugYnVOmOS4Jrg=,iv:5aVkiuEQMYRP+GmiRJIdhA4AGo8pEJNHbQ9vknEBwO0=,tag:Kb17ty5OvODpZM+SEAHkHw==,type:str]
+    lastmodified: "2023-03-05T21:22:54Z"
+    mac: ENC[AES256_GCM,data:pGYcnkJP4mY4hBek49rqSYEBa9QpwaFuKT9CZLtX5t5CvFz5OgEPOL7Z8INlZvvcayRMZdv2nqoSYr9LffvTUi6aDjMwNpIMQoja2AtBAU8AOxy8P64g8GEGvfvTLfZD1A6oVjHslke5o5iZAu3hE7abfov51PlsFFqXPNb23kc=,iv:zJPusHndt4gdOjSxZS7VyPOovq1aCx+RcYXLftGflac=,tag:F4p0RzDS4QhFbGnxoX62rA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
