--- a/ansible/inventory/kube/host_vars/k3s-03.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-03.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:uRktn0uC,iv:hKsTxryZ8xe736LQ54YhgIQndsoHFA9gO/cTn0VVlCw=,tag:I/2wSyrTvk4wPKSWcomfcQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:OyF14vX0,iv:8+lJFOIBn22tPZBVuJnfRCMYgkJL1FmJmb7IdDKom20=,tag:kADcz6bVbU+MGAU/fDoCUA==,type:str]
+kind: ENC[AES256_GCM,data:lZthVLE0,iv:SVrApHzoBBz649FLEB7yxIULlHDV/dkkj9I4b9dqN/8=,tag:OiQZ3+rNTsjKwvuJ6ZbtZQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:6R92Ila1,iv:xE+Kk8Gc/kW1ypNEr4fGDxPLc/mK2AcPBdR0MysZ89c=,tag:mHmT5LX8WyRH/dIWi9VpXA==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB0MUhMMjB2dm5vMWV4VjZK
-            NFZSZ3NrWlNCVmptcnF3bTBYQWovQ2xvWlV3CmlPbEhsVWYvbzcxOUJOQzFWanJJ
-            NlBZSHhPZmJrVnFlNFZ5N0NyRWlYWU0KLS0tIFVQdkN2UlQyTzlSVEhSRXlSYndK
-            d2hLd21yZ1lSODlVUnE4R0dFR1R4M0UKeENttWunqHNvUa1URIKfEuu7oDE1JXXg
-            gvAC6fwQp/Zr5T53UUvaHJqR6O51tf0TrnlhWtJ3LAnIWmPjiE0CmQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBQQWpnQUwrT1d2elNkZWJC
+            SlRjWE1GVGYxMGtOUGtMbGQ1VXBpdG5DaEdFCjViTFJ1ZWUzR2t5bWQwRjRVbXMr
+            Z1B4dmpWV0psbloxcDBvSS8zWnJmdWsKLS0tIGY2bHF0N1JQL0ZKTWxwdmZoaDAr
+            clU0Ni9QSHJ2YWFSNTZRNWU0V1U0TWMKNo6znF35i/y6TttMHJnn6E4EywZ5OPir
+            xaqkPa7ZMFpuh00MLW+GzvKHc5XIXEgkhQmyVxnN2Nl8OwmLyJFWuA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-03T00:57:56Z"
-    mac: ENC[AES256_GCM,data:GZwv1q0Ljwvh0RWTR1yCGyohuZjC7T/OlE/M/ePD4XbZSTrYzIdHQudjmuNO9Yg+3RH7VHQBdZWhtHktRQqKeYrbMO/KMmUvBH5eUHqottRQ+pvoz4/nFT4sp7mIUcGaGxSh5a7ZV9i5kK3eR2+drj4fpycrpVN8q6ERrnWL5PU=,iv:pv8cCszHfV3j3OR/LQoAw2veV5Mio5TDwuutZoFPWO0=,tag:7+vZ1O7tLhbbNeWoxXC3ng==,type:str]
+    lastmodified: "2023-03-05T21:22:54Z"
+    mac: ENC[AES256_GCM,data:bpyuaXIkDpVM4a38cNXJcgTfY3wnqdepeGYpfEU6EDnOgVctf+ppHOnJAYNJ21X3q1XPoY3oQi5oNxek/GW8Y8Z6QTzQ7Xkw6KeUvrDeQ/ip8LOK8wOX5DPlfNkFwK/kM5IIC+avQ6AKGnzOYTdoXRfQVHl4SzZVazGTLGnXFtY=,iv:CvbWgb5YQSHwDG3uuq+GxJLDupXKgLgVa4HPHUPyYuw=,tag:vOsMt4G5G8x9r/ar/RjV+Q==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
