--- a/ansible/inventory/kube/host_vars/k3s-04.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-04.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:3q/EFxiV,iv:BRPswOoqRv224zI4hhuILLtxEX9uVOTHP+rmERihMVo=,tag:i9H+gA0WG2+FsVuOjb+ErQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:twfCTci5,iv:xEtukErjVy/jbk8O8RqWP02xAZ0QIj8AZ+Bmo8/JnG8=,tag:DlqDp1dD6uBAUFi3sA4wfA==,type:str]
+kind: ENC[AES256_GCM,data:3UIE5tOH,iv:ehdHtPp7VUGftrufwYuu7NkeKd5nzptKAEmI8rzTErs=,tag:4GEgMcn4VQH8H4Xq+ayjSA==,type:str]
+ansible_user: ENC[AES256_GCM,data:O7IYF53h,iv:vWTGOrzJVqRuNYwFkDVmA2lR+HO2SKDQYfRNm+ed6CU=,tag:OdFqrqOhKcWPr2EkJAMTKg==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA5S2xUak04K2JrM0I4dEZ6
-            VnEzakxJcThrU0NGekswSXZITVpVNUV2K0RzCnNMTWNydklFTVpZd081Sk1PeTFl
-            cm4xbnVjTmFHbnNhNFBWM0d4NDh4cU0KLS0tIFVqVG4zQ1M0YkwvRUdWZG5QOXdk
-            aXB4c3dWQ2lzRjVsWCtqSnpJTW1SZWMKkdMPyKM3Y5Ml0ebsU6XasuOr5S56pyKJ
-            Z3QGwfa45YbmyQLSzvgmYgv+g8J92fnAmfQq7Q6+bAeeU3G8wTZ7jA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAydWN5SW5lU05oZmJhNmVv
+            S1lNNkhXN2R3aU1iSFZDTnNaK1lOV0tIU1NJCnY1WTFGY3hocDNzQktNbGZiNW01
+            eEpnSXZSSFluVEJ3bkduVm1PbDY2K00KLS0tIHN2Z3lDM2U4NG1qRmpMMXNjOGxD
+            MGp5cGhFRmNWeEVyOGVXekZRVEJUWk0KpvcE5EbL8RjEpAnzJ5UMR/sG8TGQSwj7
+            u4+cILpK6XaO1xIFB1iiaAf+hoZon1rMkr4HdsJrdK3K2cB0tK54eQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-03T00:57:56Z"
-    mac: ENC[AES256_GCM,data:OH7kNjdliSsByAHfeWlBM2Alw3a22HQWyY0Qk/ucWcUq55wp0EsqWDtbFQZ2JoUsVB9JOKUPIzIbuqRDMoh37Et5JCvmS8zDnSW25oNigGV6x9GAgcOsKaU/cpSlq+JIhBkN0O2eldtsvbo6wLdzhDaCs2QBJ1/mfp6H+hhsurc=,iv:W+dhwvLMU77Lx9xztrgVLvYTsK9ZXySJ9a9GA/X0jO4=,tag:J63rXsWpbnApTUNFyxzcNA==,type:str]
+    lastmodified: "2023-03-05T21:22:54Z"
+    mac: ENC[AES256_GCM,data:OFlYrVNZ5RZNtSmIApTOwUjfkOIL/OJ+C+0eYZl/GPJbnwRvua9uxugXAWLcE0RBA3Tk0ZKdzRcZ47L7yO7cx/pob85kDORyUX8uqQugokFoTNHSNG1hCj4HJMQK1n96WM/tlorBdHLaFh8GpRmjqdoHh+ip53At41i9wwQ371g=,iv:4mi3ZAZ90gZccsnBjqpT5+rarvdjV10xJ0Zl2C1ioOw=,tag:WM69oNIm7JcoEWMUCwwHMw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
