--- a/ansible/inventory/kube/host_vars/k3s-05.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-05.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:UV/rDRAH,iv:7TLA2gsj+DwJe8xb4GnmQAbZNd9HRBgo1Ch2wem7kSg=,tag:OcbcWTiuDwEcZsn3fBHiMw==,type:str]
-ansible_user: ENC[AES256_GCM,data:l/4eI7t8,iv:Fxk2BFEFI8UhfsZJ3MR8CthOjuaNVgAR9DSW6Wp79SY=,tag:rOGi0JNthHcczN0Hfhha1w==,type:str]
+kind: ENC[AES256_GCM,data:rxmwobpI,iv:E3oyOon35tuMN27FwRnlXvNcSuO/3avXOyNWIrOWZkE=,tag:4fXmcrPz364TtQjJFcPTrA==,type:str]
+ansible_user: ENC[AES256_GCM,data:tJqKknc1,iv:utaymB3G9RvjO6nl7ne1YFWvh1Qxuc5cpvkVxUSqKbg=,tag:VOfPiA5WWkI0KnB9skc5MA==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB6YUQ1TVNNMXJQbnF5MzJs
-            QU12NkI0VmxMbDZRY1czbjBXM3BiMjZaNHhrCmJNcjRkbXFzd2NQN0UwT1Rqella
-            UWl1MnluVjFXRkRMdFBwYXh5NDZMQTQKLS0tIEtSaHBMcWE2aUtTSzdQZmlZd1Qx
-            eXd1OTlMVFBoc3Y3TlRJc0tOakdRYmcKSUJH34Kq2Cmr1zCzJlzRGI+2gKd+vHTj
-            CXCWsRMc9xh1zhm2wwJt3wjENTvbxlxLSCQvZhWhbq/S4JbGwTqkBQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAyS0FlZ0hXOURKV2xka3Az
+            UUZ1ZFd2RnQ3Y0JPWW5GQlpNNHZRcWlPVkhVCnpqTzl5NkxNTEJlcFFlUkdoYTEx
+            NGYzeC94SzErb2w1Ry93UlRoSmQzZVkKLS0tIFFwUE9ZdEVpelFnMVBSNVFnTXFp
+            Vkw5azR1ZzFZTEhqSzhvRzN2RXVUR00KOjEs0ErzbwhEPIcT7s/CqpxyJNUTaeK9
+            V2dh04kz+qMGGtmX/YOUgOOufqNH39cJykdeoSMpMCHz3Qc6X3VD0g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-03T00:57:56Z"
-    mac: ENC[AES256_GCM,data:IXMMw7PIjEKlIQPU4NVDDgvTA0V8SQv4/lZuK1f/OIrfwc1bqsKSKkny8kH34fNobqu4kEEGO4Lm5FP5IlcstpRoY69lL8oBKJqyIDcTeqrz6qVlLUGxDXWZXXQyhXY6+TxHlbdeQ23yJn9J6K54sl/MZkyAEpuNyt8ydvjUuX0=,iv:uNfTbpk09HvqrKhqHHmurJ6bdN6Qj3LG3mVFgXAXRas=,tag:FcIP+go9ZbBZRyGR7VMkIQ==,type:str]
+    lastmodified: "2023-03-05T21:22:54Z"
+    mac: ENC[AES256_GCM,data:MaDy64D7tdAgjpgNfaSgbR4Lfkj/eHCIzpOnf3ZEL0RE4QaLMCuvu3kjm0flPuCIzWqiu3GHt2fbmYpeJj5aKDBw90icG8QVWs7f1GgO52/uGRCIxYBC/3yJjQK6QW51ric1tp86qY5VYYrfIWSshbLMVd4u02C1b96yrosd05s=,iv:DsKZTSL2NaAh3vkqWrsKHjIpkXgn76Oee8RTeEo1lpE=,tag:HvGnkECrhc2JoTl1CVbing==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
