--- a/ansible/inventory/kube/host_vars/k3s-06.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-06.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:Bs5r4kp/,iv:MDXNx0W4hJ3QWRGMydDwklnlbVPNE1kgJ3KfogvqQX8=,tag:+ynfgFA9e91DGph2cMNM7w==,type:str]
-ansible_user: ENC[AES256_GCM,data:9Ec+5qMg,iv:A6DWJkYCQmp4zIMgSVUmsK4NA+iTQ75R8rVtrDaxOp8=,tag:rHqUyawUHK4//65qtd4cMw==,type:str]
+kind: ENC[AES256_GCM,data:zIRUFvXl,iv:jZt1IZUIUhy9fKiwGBHHl7PoT3PfI4r0idmy3hv63Qo=,tag:+Er0rafSIg42e/a2M4tHyQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:h2rdgnzo,iv:W0v1PwEeQyFFLxNMHfdZwL8Zr5ASdgJh1dZ+zN3xGkY=,tag:Cdgl90whmGReINjJdJKmmg==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA1cEZkRUFnZ0hqMFJybmo2
-            UkEyL3Z3cnh3dmdOR05HVXd2UFBUc1lwUXhVCjZ6UTgvL3BQaFZIK1I4MmxtSmFU
-            RjVKbmlxRzlZaDR1YUhTT1hUSG1KMDQKLS0tIFJBaE5KK1lLWFIvdXVZTUhrVnRa
-            K2NnTlFCcDJXOVRiSklGUUZKUVA4MHMKOlcQZrn62E6d04RmquKWDOZUqN02CM5Q
-            Y49m6g1eBWEWENym8J/LpH39bpK7rcSEw3KJSbfHhEmJ5ItroGFemw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBnSVJmZENEMDM5RjVyZURX
+            aFNsWHNtdjNVQ2dQWnRuK0srT2F3Z0szNWpNCkJoZ2cwemswUDNXMkxhQlQrQXVH
+            WFJudzdNNkFIUUdRaGMvUXFNcGRWS0EKLS0tIEFnV2oyZlo2MmRuYkVaVDA2RGxY
+            ZXM2QUNZbFVtVDZ5Z0RBdFNFeFhrbkkK2I7oTrDqus8hkkMQXLaTlIUDpNVihBCQ
+            LZnHg4e2fQcwLlSnKRyxf/dBQtBr2EkCxhQMC6uQisdl8pXGvWdrGw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-03T00:57:56Z"
-    mac: ENC[AES256_GCM,data:Gl22VezE0Y0sEDJXKBs4sicTXf2dfbvlxRExCnnCfPdhXVyWa16zBgfmhaK1X+CYSPSZfYkQ4zGMkTaqILet60x8A7N8cSGnDG5PvEGvv7WODaXZiG45eX1u89fWMezdNEaYZZjlk1U/VweoQwS7V5ymlqrQiUPzQ/CIK6vUKcg=,iv:ddQqcXHHKplX5N0iMoCDiRUAjN5fZQgOdWsEJws0nNo=,tag:a2S5QF/ONIh+4LTEx6TIHA==,type:str]
+    lastmodified: "2023-03-05T21:22:54Z"
+    mac: ENC[AES256_GCM,data:fIp+phyE7fP0SjKFu8uOHC0wWdM6x3XEAMiQgC1ZEB5FC1MDV49zUAco5TM1Nn2hKFQ1etVTGSU4GePh5wbXUh1haytkVcgD7Ls0idf7e/h5y7Kwf5UlX0we+cKc1r9hCIK2hO/x3/ZHup82gv8N5LXLismPMp8o8BOIsq20jiA=,iv:JqVtdETcdsjuEZS6y+AxBwn6ujaTSVvnx+do/A3dN1U=,tag:Qg830VEQLCcPvrMx7yf48A==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
