--- a/ansible/inventory/kube/host_vars/k3s-07.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-07.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:7AUJY/E/,iv:Lq66LN6f0MpNZanj+cvcB8DdT5X/sr0CgFgGEQ8hKJw=,tag:fxlyDfQp60lLjuo8T1WhFQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:bL+GmDqS,iv:YR8PnvqeMq98z0ZMADvvcdYqoBVJl3ry3eywqBx5tGk=,tag:XuJ9QLt+8glP2f0wzY0aUA==,type:str]
+kind: ENC[AES256_GCM,data:ERYWQGvv,iv:cfDdTkbw6DhOrxhRTIfVcuC8DmClDArWRLLmqXDHGP4=,tag:Ot4yDjOc9MeFGEGJUeIyaw==,type:str]
+ansible_user: ENC[AES256_GCM,data:regYlgKY,iv:e6LRSZuULQCjuztGsqpxZgt31qKQBmd1zMes25Jhyak=,tag:weGAXCFEKc+Pcj8wDo5izg==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBXaUI4MjVBaVBRUlcyKzFo
-            VnZUc2RCbjF0YW16VkgvQUJnRkV2R2RqMFQwCmlaY0pWdlZPY1lISTJleCtjUzQx
-            cHkybmRjbmc0dTZ3SlJXUjlKWWJPUzQKLS0tIFlmckpmRUNtdE1VR1JKaHI1T2NY
-            Zkl5UWpUaG9vYzNvQzkxaGN0aTRLanMK2YHWM6mPJ/3dRtkBXpmR04lRLTLJkDij
-            gcGCT5OjcIwR1xa9GcxDSI9aW5zawB8nkWgoxWGSUzHw777BU27wog==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBHTm04S1pjNnBiVFJkQzBT
+            Nk1KVHlqR2FDakliTE01Ykx1dy9lbktKYkdFCm9pV0NkNGYrM2hEUnlQc1RjcC80
+            SnBLNzMyYUZmSU9LcmhwbXdGWERkL0EKLS0tIHk2UG16UEExTVRoa2dUV21OenpR
+            ek5aRTVpQkhZTGJycVFPOEhCUXNPMzAK4TeYviINF7Az4YFbzxq3xRQCCMkOU0gb
+            Q7J86bquj/IECp6t0PjWupIDqbd+6hhmuu4UX9EvAaXdufr7lUaJmw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-03T00:57:56Z"
-    mac: ENC[AES256_GCM,data:iSijZuFCBCUyaitxMria8+hLSupWkFi8rjCiYyJSqGWgJ634bx6sXmsE4T8GQyyIEvv6NBamsH9mp6tLtz6HR22rdsWTmfLemTsAvh8UshAiIOR4I6qZGtNWC/Uhti4wE33HOGGoeVtSIk7sLMIUhwNeqNBELpadNgO6m3eIl6A=,iv:iZjnntFTBmuTT4g1rG/glk9Tq7ZiaSennMHDgN7g608=,tag:mpuLdRTKHs605xMcFJQTGA==,type:str]
+    lastmodified: "2023-03-05T21:22:54Z"
+    mac: ENC[AES256_GCM,data:JaT4BhLbrT/8696ZOf81SA+Bu8rmxdjLO1Ay0K64XV/1/L7LhMfAvlJvzeSjgBBElaQpo026pmdKj53Cc0yqnXp5+R+56d7VtMpVY8ngxr8hXlahQ/+kYh//KpzZxkBSvNnA1XGpKq3TFaty2gf0pEb6YsEG7S5ZAfuU+OWP0n8=,iv:yiDpiMCbaYNQIXikhnT14XzyQcfMpR8j8ha+7FL830E=,tag:cKsLSh8UWsogQoDVPPfJaQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
