--- a/ansible/inventory/kube/host_vars/k3s-08.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-08.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:Y3FmkEq0,iv:+5gdIO73LFP+IdWjyob5UM8eIlOe0LO4IeY9c81UD5Q=,tag:Kl20VtFs1suAhPB5mV+leA==,type:str]
-ansible_user: ENC[AES256_GCM,data:1KE6oHXU,iv:B3I5hmXf1cnJ8HL2klXDTaWxVGf85vK6pCOKsdQ85so=,tag:gzB9F6NqmHxrVMCrWMUD+w==,type:str]
+kind: ENC[AES256_GCM,data:4l7pJEMq,iv:tN5KZtppIbeEaofU5/NQmt6Sa/4hVa+GAEVegDca/2E=,tag:iKofHV0/onlnCkDCOMLphg==,type:str]
+ansible_user: ENC[AES256_GCM,data:wUchXJC0,iv:1Z5gsoCv48V/kSAYTE4ZpPvpbGS+lcZna/ovbaL7H28=,tag:Lc8q9QKMaO0RaWaj9aKK2w==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB3S1oxT0ZOa1hrSHI0dFl3
-            WG1MbEh4a00xOGlkRno5SUc3NmFiOW9Kd1NzCmF2MUF1VG96TEdIVE5rQmZ3b2R2
-            S0s2V3J0UU9DR3l3N0NnZTU1Q3lPcW8KLS0tICtJYmxIM3NtK0tiNTRTVXdMaGhS
-            WWZtQWhBVHh1RWQzNTN4TXkvZE8rMVUKGlRNXRir4dEDZDJqsd6ioUP+gDRSNZW0
-            aonwtGnhqsEloMd+myl6awJK4l/j2Mq30iwCye3r3g5oOVU3Wv9RIw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBCRU9FS2wrN0pTS1RFNzVP
+            L2NoWFhNVThtNXJwaTFqWHRvM2ZyMFNqaFFRCm93L0plK1ZQbjZ1SmE2RTdqK0RJ
+            bXg4REd1NDY3VDRHTklkY2NHd1FwVFUKLS0tIGhPNlhGbWRnNW5TSFBRYmprdkd3
+            Y3RGR0dYSW9SZEsxZWdWdlV0T1dGQlUKxBvaYJs3TtJs2bpGdW4Fw56KTKnXygLs
+            rzVoAC0/wCl1hdmR/X8QN4fjYnQJnm2zfDsOEFCDTQaEq5xRsFg1Ng==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-03T00:57:56Z"
-    mac: ENC[AES256_GCM,data:4JSA6dnXYOcqiXDimOF9Gchvb5xqgmzzfL9luHznh1VYS5ctbeij/puD8AkNJuvEXeztWb7jcxPKTCYdRs0DjmCtI8IuP4urwq3+G3mpK/vynr2AKjYFDUa4OU8+J0/RYcJ2Y1ISpnTJRHMYwXMWN3RzmesWO2h9E8BEe8dOs8w=,iv:3z+qrXkuNsdylKRYvhjhjGh8PMuTrhhlhXUdP8b5FoA=,tag:iZKkQkA+kOLYxvKH+4HHkw==,type:str]
+    lastmodified: "2023-03-05T21:22:54Z"
+    mac: ENC[AES256_GCM,data:2gLBDTCvc6iT5SmPe/2gOvyLBOXQMyvZvV/a/5PUr6kfJ+8NuNGYyChy2pUCVEoE70PMrT+D98G7J70McJEQypW9HpyCarIh5yPwp4if04Pg37nWr0cqRE+/ZzxXkMbmSs6Ci3K4Zpep0FlXrsLoHKlx8Zzpo27AaGcDleO8duM=,iv:QtumX4Rwfm3aYgCWyWInL7aot8+7e6yQNo/aYCu6JWI=,tag:Kh5YcKU2C0iNaBdHSeHamg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
