--- a/ansible/inventory/kube/host_vars/k3s-09.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-09.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:v1fQpqJc,iv:NMZE7HIfHk38005qZAzVpvia60r686Y15YFm7L4uLKc=,tag:C11Zobs+Wft5tQukoEGofQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:DYSt7Juo,iv:94pi02HlrCYEIT7apmwzv6eNqUGYVp6nZhIGwz0kr1c=,tag:wXFI/DTS6a62r9Fq69qJUQ==,type:str]
+kind: ENC[AES256_GCM,data:62HPtDkt,iv:D66raRTSbpa13i31uP/QWxcc48Um2/0fHw1u54BiXCk=,tag:TTuJmj6O+y/3sA5RGzwn9Q==,type:str]
+ansible_user: ENC[AES256_GCM,data:pglur+d+,iv:hpjvEmS2nr+g02mhrTEzlNxZmR4/PRTRf7ZQ/JPp9x0=,tag:2gdO2s2gsYur+1dbkWtsmw==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBZdC9LRVF0RGFZMkYxT3dl
-            Tnc0ZnV5TWZDcDFNWVVSdGE1aG1HQWVyM0RNCnhMZmJiTVpJZjNxUjZ0VFlOUG9Y
-            MEpWRzRQa1N6cXI2ZTkwbUgyKy9jUmcKLS0tIEhlb0xjN2VJYkdSKytVSmVrek1n
-            dkxNT3FxRGdNS2RKZEZoMHZ6WTR5QVUKEiYwkBZC7UrV2EHBnWc/lSjJ7ldBkVDe
-            kaBpFisnGmft67hu2g0VMOZzWFh4BAc0Qkq8qPwuQ4gTYtxV9gcecA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB2OUdTVTA0cjhpaU9hQWx3
+            aEVYdW90Sm9GNmI0bXppM3NpL2ZxTkJaenlFCjVHcGMrVmthNFV2aDB5dDR5YUVF
+            KzBoT2FlbGJLeEJReVQycDB0Zm9RVk0KLS0tIEJxYzdPUG9TV0YvNlBKTXl3L1Mr
+            QnlueFBVRVdOSFlBZzA4K1A1bVF0TzQK7EgQv3G0GoKRQgUACkBn8i0HQu0zoQXv
+            joSScMlJDGl37c9AxbkS/Y2ijifYSQC3mfIQBaIy7QC2zeY1ndR2AQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-03T00:57:57Z"
-    mac: ENC[AES256_GCM,data:rczixb9Gz8JOESW0f+fFRNpvWEXpKeOujJ0BjqggqDtvWJ8aaqsBmb9hjLt1mvgMwKNtJ9W31uvDc61GEeFmbehnHCanZN8iz2Rwowv+cygkFy2YXUpZ/srkkgpFs3hzVIl916uZZkEsYtB3Wg7LcGkaCIsVNks38plhIIqPVDY=,iv:BhS1lEC3QAH7UyaaBON6wt38vCSytf3gzW3ZAadYQX4=,tag:sCtBZqWhgRhboo9PWHS4+g==,type:str]
+    lastmodified: "2023-03-05T21:22:54Z"
+    mac: ENC[AES256_GCM,data:EEAtRRwyjnCfAWdsapusMsQwpUcSJ9KRJQB5yBsHCbNPbZGZLuQc8Jn0K3GJCBYY4i8NDIAHiWz2LLVYUm6XLX67cr6tA/L2MwSRc0f140amef8fqKZHSkRlIJhfKBdPnFxNaxZz56LRLCoLg4LL5xP2mf+NaksiKy8q+12gzQM=,iv:mr3ELnXj299K5GQ5UKZLVoVZCdiAlju+PrrfuKmvmLc=,tag:Fz8tPPMVxx2NwQJQ9nqa0A==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
