--- a/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
+++ b/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
@@ -5,9 +5,9 @@ metadata:
     namespace: networking
 type: Opaque
 stringData:
-    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:qXRUUjHEvFRQNZwx085lccO7sLpx,iv:Cou13LwJTXiVVQ7NulnCK1Xa98nSG6MXfJg+PH76dUs=,tag:0duahpfw6WgfxNLHGKsgeg==,type:str]
-    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:TDMhS7E5QRbiQ4qWeeYVCcqMR5L1V3VAsk8yJy2SOgpNoCPbVg==,iv:JAbhAUySZdeAVXMawxqYJcn0ub4kzv0Pux3MOsmb3hI=,tag:3/vtxtXTMP23cTkpHZ9S2w==,type:str]
-    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:CpaDjaJ3lru3aqw=,iv:X9MPx8G0Ucg2afF3ySdhnrS9bhLU/5mul3Jt+qxxHMA=,tag:hxTAdUcxAJ8BZh6zHqn7bg==,type:str]
+    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:2CJMvUkTHAuBIJPymlddtbuFWPWp,iv:ZIrrggzlQwt8LL5IwdOEj/tqdsceDcnZQkshWByL7h8=,tag:f6j4oL40CuasoaLJj+MOkg==,type:str]
+    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:tH4bC2SQGaC3o0XVQb6D/99eEPh61nhTTZgrkfXOs4n/OnKYbQ==,iv:sh0143jptAD8e5qeF5NZSGwLshv8GhT1b91CP6ux+ys=,tag:usePBxOEe9z3Zb0ikZ9IQw==,type:str]
+    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:fNuBviZ0YwLK0u0=,iv:rxqNRoGON/sfYxkOt79RtLgZtyiaGrEG9L1omy+PWeo=,tag:KNPqJhjm2aEHV1pT/daiyQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +17,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBzNEZRYy8rd1JSc2dkWFpF
-            clBTV3k3MDNEbWdNK0lycmNzU0ZoeWhCeEFrCnllRWg3NGRlVFNZazZBM0tGZG0r
-            TWp4UXpHQytIdGthclMzbUVRb1M2dmMKLS0tIHF2bk95OXdFZzZOWmd2b0RBRzBi
-            R3Z3ZzhLU28zS2FHcjRPM2ErT2ZkdUUKS4XjO3GG5A7mviVqvoIM/6VWpoxHY90x
-            FHeREMybAQp0XS2vO86xLsfTWPVy9BgTj1F+2sTTSy/CcbEA8XCNVA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBKTmFSZUw1RGhSak9DUDM3
+            dFhwUUFqUmdESEtLaVhIbjR4Y2FmbmlTeW04Cll0R0w2d29IYmlDTkE5OHA4ZkZx
+            K3NJTG1mRTQwN3kzb3p6aU9yZkJBdncKLS0tIEFYQUFpOHhqZ0ZKWk9RU3FnUmND
+            dllCTHVkanFncGVyWXNUTnN1RGU4TlEKQPgTKReZRzbzP3Sh8SbNIcb6hxlbvZX+
+            qJ1vJsWW3ZS09aGIt2acRQrDHoKBeB9MbYS6UH3Fjt/QK9Mk2ph1Jw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-03T00:57:56Z"
-    mac: ENC[AES256_GCM,data:0VxpjQTRLUck04sWOMaeoMV/CvsZkXziJv7qFuVOv0AdVLYuK9jwccIS34pqBnss8MY2T+BSPiDUg+99CjsE6u3y3jLjYz4AU4fkXTAGoXe+o/B23bFLYPx8EbjHzepALaWo1e8Jd8vRAqEQZgtor0VIGzaTHmmZnYcVnXzYfoc=,iv:r/NnLSJOEYJsFutbcSsEDdLaBH8YIskdr4DnxfVcBEA=,tag:LOKKnrlkuFgqZlLdM76FQQ==,type:str]
+    lastmodified: "2023-03-05T21:22:54Z"
+    mac: ENC[AES256_GCM,data:wN5ucfU0vVH1R/dPr8PbGmLSv4fn3+MoDpHAxJHoEbzMCa+RMy1M1Ja1l0KGnPafNpy2UxehnUg6ChtTSCTfeW9CsmlnZ5s/SthycFP47k/G9oalUVwnCtwfR7VIqrTKWUDNVHcInjSE0y9SG+t59nnIAjKDUKM7zpOU7AhQDrE=,iv:3hmhy/PpnQRn4+7rjaVRG43ZLPGMWaTIKV5IfOhsaVM=,tag:3cWWQiNt/rUwD+ETVeQZog==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
