--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,32 +4,34 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:twX9SRNJA6WWgA4=,iv:8UxQS26/GDRqTnCc1aaTQW6p4+r0OHLwdPGDvG1AZAg=,tag:TS4/g9vOYkWj+eIp7U39/w==,type:str]
-    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:eMWQrqTLesR2qqhsjzY7MQS4HE/C,iv:Jrp1ghRbuAaFatXyhsrWxoKLCCR51jl5dmxUX3bXGSs=,tag:JxW4BSi1+rHDdE3jra0eBw==,type:str]
-    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:/L+Vo0mHrVZ/6k0GI3v9r7+10SYY1KhSOEB7o5WwECptEwy+kvH/tWWt9W5FPxXPAr/bL0SGX5dRCUtr2XL1Yk6ZK+ezh20=,iv:zhx77tTOEUKmF4Xl8eRZA429WTmMUN9RPUSTiVGvvJY=,tag:oblEKRqBCD7NImI4fEFpsA==,type:str]
-    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:oW+fZxmjE6FdQnd5DHQxxzFSHMPljL68YE2HufQ+GN1ZNNw=,iv:hwWANjGLyzzYDJPx/rwcQ+v4fRk0rukWJE4riApj67w=,tag:aH2Y1lAlM6r5TS471TruBQ==,type:str]
-    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:g+rPpQx1MdNpAGPuJMre9sIrAw==,iv:Noi2IZpBkoYzflVBqQSAEQ34aGZ0+kXACuC9vFBVAR4=,tag:i+MB0XwWN+oQppNAjB9XWw==,type:str]
-    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:C1l/bMtzRRdH/79sPxP867/9PQ3/,iv:a+eAVecMfJMtTbKo0uG53P1UwIb4VmTVINnCiRYHO2I=,tag:xiuU76QjLVYXZqsDaWxYCg==,type:str]
-    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:1rSz/oVBu68=,iv:+X2vPAYAV56EFBoGpv5CE1hlKPYNbWIK8zwOTzEBhuA=,tag:ajpTGuaFGoaEYYltVtVrSw==,type:str]
-    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:sIonIyu2V4o=,iv:EFlWS7GzMmQN6Oqb4KJ5QPiXGiY+YnMrl0CbseWsZ0Y=,tag:bS2heRsZqKlRc4VAQrU4vA==,type:str]
-    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:V18YdJu7DbcWosA1L2kc5NcFGTWuiCeLi6dW9VfPFb0KXAURwHIKH6vcoIf3TpaxAsH8XomKE2hXHZ0YkxQyrQ==,iv:bIFuPWGmLcfmNwMYeqZpo5pcbOvhSS4whWRZWueOywU=,tag:X9zgXQJnMLLPofZt0LmxCA==,type:str]
-    SECRET_LLDAP_JWT: ENC[AES256_GCM,data:02IGeJoHBRsFOU7JmP2jLN0TS39bH+K9Uj2vOmjYVLJnScU3ZqjUp6PMD1I2O8t0gfn2rixnRi2f1JrcNSwPXA==,iv:3Y0QWLdLYgmmMITeEMVyGElFgzf1QU8DztfGfgqq7Bk=,tag:Ib+cRTakjKI8J+Pi6My1LQ==,type:str]
-    SECRET_LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:lnp5B6Z28tZH,iv:towudJl+hYIYjdH+zK5gkE2obQ+vYnmZHGBWaP4+l60=,tag:2hWygGAtEHjL2riFOAB8EQ==,type:str]
-    SECRET_LLDAP_LDAP_BASE_DN: ENC[AES256_GCM,data:f/ME4kef5Pwa48K743Ac,iv:/Q+zk5sWa73GgwExaIjlQBTL8dVwJQRPh5wQ7jliWyE=,tag:hMc30uk+JcvynQx9+1490g==,type:str]
-    SECRET_AUTHENTIK_KEY: ENC[AES256_GCM,data:IJtMhEek/O9TNGiJY22FkAKmz4USHY/GePJtxYkELVPLNdPupqcSkecdoY+iYI9mt38=,iv:Ghft1QIUED1zDsFtW39DhYBSAvgriU4BBf31LKuFHwQ=,tag:Ka+VIGM4Kej/iJD+467QVg==,type:str]
-    SECRET_AUTHENTIK_SMTP_HOST: ENC[AES256_GCM,data:uLK3Orx3MCtOC5T2vqQ=,iv:414LmDmJ0YOySxrcWAiSM4G2dSktx+ifG1Ux8PgCAK0=,tag:RmaYSdsAtpW08GX3SbCUhw==,type:str]
-    SECRET_AUTHENTIK_SMTP_USERNAME: ENC[AES256_GCM,data:SnfShBJfQARPWkgXPgJr8peBCvY=,iv:QNxToAlCDD+YNPpDCslDmw8Jb0FHLhFXJapTt6EM+4s=,tag:p+zznSaGNFnfBFsAXsWhAg==,type:str]
-    SECRET_AUTHENTIK_SMTP_PASSWORD: ENC[AES256_GCM,data:NuZTAQDrs4c=,iv:MER501VQRt3zR4zp9q2ottmIk8jsLc62oWJW7aX6ej0=,tag:I3/8VE4sDyHhhCOXFmsJig==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_HOST: ENC[AES256_GCM,data:S//QhkoUmjUEpUXJn0DSANTZLKSGuJEnEJhQKj0dPpq4zteXDQ==,iv:km6zu/In6voP4w3ibTER24hf6/d+E3R/qEi9JL9fIVg=,tag:lT0Vk/pvRnOfnyJrV8SfDA==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_USERNAME: ENC[AES256_GCM,data:VRXDrMSTz/Lf,iv:ZS+871OhyC0IzTolzIJbhtRnQhUFZunHpQJoVnaKvmg=,tag:UHhKmOQmPRvR9m+EJTz81Q==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:LKS+8Iq/eijB,iv:qD+KjdOhfzUnhMWrFd3tfcSZUMU76G+Sc1/8UsGgkLA=,tag:+IXG6f/jeteWgKobvh4lXQ==,type:str]
-    SECRET_POSTGRES_USERNAME: ENC[AES256_GCM,data:3xlUD9KTTg==,iv:jBJ2pQ2tD5r1at07axcCJpcyKQAReRi31sMUbHlxn30=,tag:EvLyIkcCuIgs34J5egKkwg==,type:str]
-    SECRET_POSTGRES_PASSWORD: ENC[AES256_GCM,data:xwamjvDTiW7N,iv:2AldRGJjaIPZvBDQ7fWXEV8vZ44azwCWcOcBAG4kfIo=,tag:7dMXwId/YUQZVawGOBuTpA==,type:str]
-    SECRET_GF_SMTP_HOST: ENC[AES256_GCM,data:kD1Bhi6BT3PfgG0SsoVc1NAN,iv:wjsB71B5t0MMknE2hUmkfecPW8HyyI097oU52Tvqi7E=,tag:70O3FGYsJ84hnGGemiht5Q==,type:str]
-    SECRET_GF_SMTP_FROM_ADDRESS: ENC[AES256_GCM,data:tRXWoHGpTKiCEL+zbv5dLWXjnw==,iv:64/Y5klgesTP80k370y6nRHlGu8IYFIXfd3jvGFwsjA=,tag:qcaGRgK8Z1NXXfCqsk5/6A==,type:str]
-    SECRET_GF_SMTP_FROM_NAME: ENC[AES256_GCM,data:mW+qRz/282Q=,iv:/2RYYe2R1T+/H3rSKer4Go/K7UykgzHjWHt0NQYOYfg=,tag:Flcw6xu5aKEvMvgnbIKtRw==,type:str]
-    SECRET_GF_SMTP_USER: ENC[AES256_GCM,data:oJ08p5I/EH0qrRKsCPSEEybd0A==,iv:z1PLGYNDjWHoUh2rZdVQOxKovNiYN81MnOGXWR028ow=,tag:cY0JfDmoH3lBXNwHWntbvw==,type:str]
-    SECRET_GF_SMTP_PASSWORD: ENC[AES256_GCM,data:jHHOenj02VOA,iv:othL8wMpywR+SUM87M6T4c8R6pUl2/u7G96OMEF0UQg=,tag:w8YaodbREIssFnCPrI6iJA==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:qodPaQXlyVL6q54=,iv:OnoAAT4jF/BNuilGwSwgbYwTLWg7z9Bbsm/dn3/OBqE=,tag:s3EPK5JfLpB59e6ANl5FOw==,type:str]
+    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:gf61+SeADDkRqZk2sDc90EKqtmh3,iv:n9oT5cUx8iZl09Aejtzy31sKXsIWanCyaO4v/1LgtZc=,tag:DVmMMQBwl8Vdey/8C8RczQ==,type:str]
+    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:sKl5i18kW8SZ3GLm7L0YaX0wbRa1TdtZrKEWx0BCeCK/WUEjrQ+CCCGGCXCHcq5JoY3bXioHm1Esh0sK+8b6veEtwYAtYGE=,iv:SDYnSgSAmKJjbL7dUEE3FyfdsTq14KscjtamyC6QiZ4=,tag:8/kWFCEj1CPbgBqcJacoGg==,type:str]
+    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:34OqE8vmO0V1Qv+AS12CVSQ0FwqBRVXWdTyLDj4bqCMLcFk=,iv:T2blczuRccB6qu3GRKSeS6A1VYI0fockBdl17x8hUVY=,tag:zpWi6vAsqGE23xo7X/5jGw==,type:str]
+    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:ug5yxZciQRr4OCdJjTuX44n0SA==,iv:eXFMuH836kJigpDOtmH2EkLJzSrL+W52G/vq3wRcqH8=,tag:75KZ8eKy63bd0gqDzMHiSw==,type:str]
+    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:ziW4J4nKcD2f4zYnW7vO+iZ1hHPc,iv:BEQLNBjceqeYwjGuy2hyO65k1sj4KTV0bjNgQEWxWwU=,tag:dfLB+JGJLSXg/X2KbtDn9Q==,type:str]
+    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:jfbahgCrXmk=,iv:r2A6BDA/ZCNXFmRJUAxvPsDD5TzpIfu73qfyWHTmC1M=,tag:omM30yeYSrdySg4nqqhggA==,type:str]
+    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:PQd3ARlQKwM=,iv:Q2IGpjWoTQd8wKjO+vhOF98OokP0m2meQpikDDGzmZ8=,tag:5GepOBQ5gycsZp4WKxWy4A==,type:str]
+    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:b2SgJ16S71VHhJ6Jtetr5boVF/QE9Vp0hHrv34JV347ZetesGHg4E83MjlGbt+BS8lfC76sLgW3i2oX7yycw5A==,iv:uJIOaYzlb3ZxKTg1H2jgoJ3/emmJ8GFski4kl68vwH8=,tag:EkkcjyF62t+XwhWnfhPNWQ==,type:str]
+    SECRET_LLDAP_JWT: ENC[AES256_GCM,data:75oVOqMKCCGcVkisaiTwZRJt6QokNaE3GVmsOsysOKN2FUhlhjlBZ3MRQySJ91W7ZXn02COqA5oF2HnO+MlgUQ==,iv:u0kj4tW9Qp9yRF0DJKAT0q7rdVPsqERlIO3PiBr/Fe4=,tag:roPq4c3gl51GsJXXHYhwPQ==,type:str]
+    SECRET_LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:DGFY7Ug81hAY,iv:iAFURbW6is4gC4v2Y4v1CW9PneNSBFgymbZGHE/JS+4=,tag:QJP4x2UAOgJ6XJgiH/THzw==,type:str]
+    SECRET_LLDAP_LDAP_BASE_DN: ENC[AES256_GCM,data:Rl25Xyienr5DXvVdcICR,iv:MqmElQeLAZjBIL149TSip55fVkPH+9qCgsf0gFlmuVA=,tag:Pr6ilXpeDdDwyQ9lQwqZeg==,type:str]
+    SECRET_AUTHENTIK_KEY: ENC[AES256_GCM,data:HGMxK8uLl0Mbu+VJUfju0bnNmfTs78uIN2wMpAKWA9AKVdyt00bzC0I9t9IlerpoPqY=,iv:hmcSOS/gAv9Gad6d8QSueyDwtHlBMRP/qhsHDOeqTAE=,tag:QJ8qPK46wJNXm0s3bbXNiA==,type:str]
+    SECRET_AUTHENTIK_SMTP_HOST: ENC[AES256_GCM,data:0BFuuLO332/Vhw+QReY=,iv:1KyPduwL+VxEsK50pith3Z6KtnWfl6PSN0XhtkdMrOA=,tag:HlvHAd/rsJQdwPBWCCLY1A==,type:str]
+    SECRET_AUTHENTIK_SMTP_USERNAME: ENC[AES256_GCM,data:jQHnmTbijzPLCHPcRtMjb1iPHk8=,iv:WK7HIOaH5BhxW1B6/M6GeBtiX83fYAYpDuDJTQNZD6M=,tag:KLFmqhN4QsmyN73xn881/g==,type:str]
+    SECRET_AUTHENTIK_SMTP_PASSWORD: ENC[AES256_GCM,data:ze57eEnLreI=,iv:ikMpQyCTKSQCH2h0O50OnPEfH0Edbg3yDz7LFyOK2DY=,tag:w7vMZ/ssMaKUk/YfrKyZvw==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_HOST: ENC[AES256_GCM,data:wq5Pwff3Hx0XJBzVzgkR1NBHZSmoU3rK068jvTYE1exV8FjodQ==,iv:WghShNjfcBgxe91tZVZdZrYc8PK/bMPuUmdkcxluG0A=,tag:XYqj2LcsEYcuM5L2XJXQzg==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_USERNAME: ENC[AES256_GCM,data:7Ku7gRppppR5,iv:DWKpXl60oZ2ORHm9SZLCMiEYSSMwvNgqvNbSLuq4ik8=,tag:PuVtznjZ9u2Vtyprtk4KWw==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:nwi5h82i5MZQ,iv:c08yKDaTyG1gPVksxo5UoQdB357KwTg2eJQsKcl9wJU=,tag:ntwlO59KueehuYh6youokQ==,type:str]
+    SECRET_POSTGRES_USERNAME: ENC[AES256_GCM,data:mo8iAK2BWg==,iv:MTsXR2fZAGTLh2VDEDQs08+1ZTeToElflGOZuvh9aDo=,tag:t4HtEc3xgWn0KI58XUt7Rw==,type:str]
+    SECRET_POSTGRES_PASSWORD: ENC[AES256_GCM,data:2kjc5ccTk3W+,iv:HnbAy4ciVXsGTdJLpMbVlMu6+Tg9Do35ZCAnAw6rhAw=,tag:5WrBajltMdz294Yaok24IA==,type:str]
+    SECRET_GF_SMTP_HOST: ENC[AES256_GCM,data:1GyAK3CWdPGrMPmiW8/JAXBb,iv:3TmFGugBUWxBHre/02Eb/n1HOq+CyUOt5p27iiwgU18=,tag:Um0DuF8jC3f3Q7IlSH5fdg==,type:str]
+    SECRET_GF_SMTP_FROM_ADDRESS: ENC[AES256_GCM,data:Ie/KVbIYWAjEGd1KbJRiieplRw==,iv:9HMbvO9lqcJK5U6ZWmC3gSBQTEAwrrpnCVD71vTgxZI=,tag:yPfsQAHmwIw2PLNUKjeFig==,type:str]
+    SECRET_GF_SMTP_FROM_NAME: ENC[AES256_GCM,data:Q0xKmpnZfVc=,iv:dN9LQZCLFMUWNlSlrtnzc6b3rOkDw+NN7NRhkZljnjk=,tag:5LfmbG+SL2SrjTR/QX8ooA==,type:str]
+    SECRET_GF_SMTP_USER: ENC[AES256_GCM,data:eFEf4KQCSo601jJDFYX6xjkzpA==,iv:S7/GET0v+xoVM4Y0id0SNDzTh4DJWjwJtzwB/wc0PEM=,tag:gsopm8OEQdNh8HEjPDBw0Q==,type:str]
+    SECRET_GF_SMTP_PASSWORD: ENC[AES256_GCM,data:aL/YDZVjyVsI,iv:LeCiG77mVEVI53MQSiwVlSP1HTPmnk1wQDA+0SgR/Ls=,tag:tmL4trmRtwnjqFqFO/vM0g==,type:str]
+    SECRET_MINIO_USERNAME: ENC[AES256_GCM,data:/gathi4DTta1+Q==,iv:WmtE5ljZHyM/Hqznk6DwYECQTaebQuMjNaGNYUOilWk=,tag:FAxXH3UpSLW6fPxuucWg5g==,type:str]
+    SECRET_MINIO_PASSWORD: ENC[AES256_GCM,data:groTPRdzBroEQg==,iv:nepWzehMFpcMW7w3JtMH95EmHR5ZzXD9tCsV+MUPoaQ=,tag:mgFuGhpNY8dIX6Yz2OP9uw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -39,14 +41,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAyMUxpL1l0dG5lc0t2OU9V
-            dURielkvbGhGanRSZHR5MFo3NzlQcXhXcmlBCnBNMnZ4cTlCVDF3STJSK1k5SmVJ
-            MCtRNjBvK3pkczAzMU1HYWFSd2lOVnMKLS0tIDZ0TVpDTVZoalBIZFN0QzhuZEtZ
-            R2lQWk5CdUwzNVRyOWE1UHp4U2VPSGcKw05fzZ4UgTbrbNWgc/tr1rSFncM4Uno7
-            BCIVXnaRPM8rhAbkiQVnHbrLQx2FpPW5KEy+H0yV7eakUfeTX2iVNw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAvcUp5UEVuVHEzQlFFeG5P
+            STJhRE1sbEhJZmxINUR1emEzeEhac1hsWFhBCnVJbGNkb05jTkc0LzdtZkNwMkRK
+            MzUzRVp3ek5kMnB0YUdMN3VmakREaWMKLS0tIGhteFh4VkxlQjNnaEJ5dXRYOVhm
+            VkhqWC80NldJTElPM2xUeXAraFM4bzgKVkUbMOpu1zBznkwVzC5acX8mS9adB0kk
+            Totlv7/WCIhQYH096+Hs1FpqWI9POyit25plrzQWnHOwamoDJK0uUQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-03T00:57:56Z"
-    mac: ENC[AES256_GCM,data:2BZrtpdlnuWx53IyucGUzqXLYknnTgEgu6/Ixnv2if18U/a9zYBbRG6Qhl5hHlt5hEXu1kOkz+hQWSJfPQ876O56rRQgTq7RAsCZLG/cekAY2ADwst9MOio7PaQ4olWQ2rhEoE296WKcLISIAKJBZoAvjokwT0uw6KO1P6yEEJ4=,iv:aKB3bCytI3qViZ7RuDy99K/r4p3RERpTQfeCUFLqXL0=,tag:Aw0GMSINcI0HdFRxVE3/Iw==,type:str]
+    lastmodified: "2023-03-05T21:22:54Z"
+    mac: ENC[AES256_GCM,data:kp10UzvPasdHjxKi5yJbbumfgeNEqcy+IGmrdcct4x4bmj1gs1KBd2o7uwNN/yShoYoE1kfncJtFJbjvMwXw1GwIPoDVCkxUrnKynWz09l85og8SyQZN1fXK28v1vneEAUq3GK+WHPA+ptTQA7alCp+weRAWZ9smtbHQYIVH1ls=,iv:QO0798sGMt2pLaUQA/llIXkDK9hMjwpDyLnwOR+kTrk=,tag:Q9LT7arx4iqKhSVl90DRyg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
