--- a/tmpl/kubernetes/cluster-secrets.sops.yaml
+++ b/tmpl/kubernetes/cluster-secrets.sops.yaml
@@ -31,3 +31,5 @@ stringData:
   SECRET_GF_SMTP_FROM_NAME:  ${BOOTSTRAP_GF_SMTP_FROM_NAME}
   SECRET_GF_SMTP_USER:  ${BOOTSTRAP_GF_SMTP_USER}
   SECRET_GF_SMTP_PASSWORD:  ${BOOTSTRAP_GF_SMTP_PASSWORD}
+  SECRET_MINIO_USERNAME: ${BOOTSTRAP_MINIO_USERNAME}
+  SECRET_MINIO_PASSWORD: ${BOOTSTRAP_MINIO_PASSWORD}
