--- a/ansible/inventory/kube/host_vars/k3s-01.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-01.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:nKnX0S4G,iv:YO7jNl54NsH3uHC8lQBzOieImb7Gewbu04UCNjtfbv4=,tag:DgWeTD8ACWu5lLI6/MKIWg==,type:str]
-ansible_user: ENC[AES256_GCM,data:ta47CeeH,iv:qU+nlAwxUaesbRCxiitiUYk3veD0Gwj+/jKXi/KIQbI=,tag:tR+Ysu8vs8RJerbzdq70ag==,type:str]
+kind: ENC[AES256_GCM,data:nKbp5LuD,iv:DNX2U/yRt4xAd1fY2BUb8D+fMX31BmsFyz1abWwm3d0=,tag:jKhsNjLqc6HEL4HSj8siwQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:oJNy6FWg,iv:8MI71lx7KpJ2QboPoMiMZ7TIBLSeoMZhQPsL7AgVSek=,tag:veEmz4CzTUXQHjif4PWIJQ==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBWdFdyaUorQXhaT3I3SVJk
-            Z0cvOE1EMGxPaWtJNkRQbjM1REZKUjBtYkVJCnlBeWpoTHNpd3J1b1NYeW1FV0Jy
-            MTZ3ZjNWdHZTRE93SkN0N3UyNFp1T1kKLS0tIGkxeWc3UlVVcUNzTzRXd1lHcDVG
-            dE5TaThmck9ENG9HT1ZqcW1QWWNTU1EKiDmK8mFZyZwWpJb6QCOcHNGxz/kPAlAQ
-            1BSxBXZrS22zrCc65mCzb0gddjSnpy9tK5KIyxI/TS2Vbj8zjkKMoQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAwVFJGa29vcmRCeGVvcmE2
+            UzBUQjdTb0hsWDhCM0FQYkhnWEJLWGxEMDM0CkpmVlZpRm1ISWhxRGhYOUFxenpi
+            ek5mdkVPOFVkTy95V1NEaFpiNXZxdWsKLS0tIDRTSy9WengyMDBnQTFYNEwyd3VI
+            bjEyOUY0aTI2QkYvRFpFQm41Nmx0N0EKvNspsFfBp4WybVYzcEwS2ncCf7TuvbrK
+            vZMs2cd5mffb9xaoBtx5XozmbEzAbDdBom5PNOwTrbNdfQXzeYLFRQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-03T00:57:56Z"
-    mac: ENC[AES256_GCM,data:JmktEzXRfpu77Y2y5UydHR2rQDqwmN/uHK5Ytd6CsHCar8Mw+KcXVHzcs87Yk9OBomLLA9my3FNHfdamgOPe/N1jlpfGiVULIYdZmcTPOiY6aDRtqUDOrHgXN8UQkus0xbh/qhlOxoWvnrB9vFlf6XFz3gSA1r0H8h0vK04NqeY=,iv:8qspjulQUr8wKU2sAvGsWNi57dkcIHE6GT+Q1aIAbek=,tag:0XB63mlx3+21p4T8mnjCgQ==,type:str]
+    lastmodified: "2023-03-05T21:22:54Z"
+    mac: ENC[AES256_GCM,data:Xt+ZB0WvZaRQTQUIKNSoaSP60cAdFfdm4ttoybMCgtq2nH+oRDOkvTVCi5sSzD060D+szxScUvlz40RI7FzAovJjRPitmPV5E5yB7nJoK9O83ajfzqccggZR3egiF4v2P9Oh6ecyYNc5rwzum5UjxGQ/S7n9nDJaif8ef9GBcDc=,iv:mSs6OrNZjqHBuhJMPKjYmoiiU+LZn+wFmdcWBjcHtL0=,tag:Ngmk18iIalOLMdRq4Z+bvA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
