--- a/kubernetes/apps/monitoring/vector/agent/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/vector/agent/helmrelease.yaml
@@ -1,109 +1,76 @@
 ---
-# yaml-language-server: $schema=https://kubernetes-schemas.devbu.io/helmrelease_v2beta1.json
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: vector-agent
-  namespace: monitoring
+  namespace: observability
 spec:
   interval: 15m
   chart:
     spec:
-      chart: app-template
-      version: 1.2.1
+      chart: vector
+      version: 0.20.0
       sourceRef:
         kind: HelmRepository
-        name: bjw-s
+        name: vector-charts
         namespace: flux-system
-  maxHistory: 3
+      interval: 15m
   install:
     createNamespace: true
     remediation:
-      retries: 3
+      retries: 5
   upgrade:
-    cleanupOnFail: true
     remediation:
-      retries: 3
-  uninstall:
-    keepHistory: false
+      retries: 5
+  dependsOn:
+    - name: vector-aggregator
+      namespace: observability
   values:
-    controller:
-      type: daemonset
-      strategy: RollingUpdate
+    # Original content copied from here with edits to remove prometheus and opensense
+    # https://github.com/onedr0p/home-ops/blob/e9a0bad87512024e6c824ca9d0890bd051dda14b/cluster/apps/monitoring/vector/agent/helm-release.yaml
     image:
-      repository: docker.io/timberio/vector
-      tag: 0.27.0-debian
-    args: ["--config", "/etc/vector/vector.yaml"]
-    env:
-      PROCFS_ROOT: /host/proc
-      SYSFS_ROOT: /host/sys
-      VECTOR_SELF_NODE_NAME:
-        valueFrom:
-          fieldRef:
-            apiVersion: v1
-            fieldPath: spec.nodeName
-      VECTOR_SELF_POD_NAME:
-        valueFrom:
-          fieldRef:
-            apiVersion: v1
-            fieldPath: metadata.name
-      VECTOR_SELF_POD_NAMESPACE:
-        valueFrom:
-          fieldRef:
-            apiVersion: v1
-            fieldPath: metadata.namespace
+      repository: timberio/vector
+      tag: 0.28.0-debian
+    role: Agent
+    customConfig:
+      data_dir: /vector-data-dir
+      api:
+        enabled: false
+      # Sources
+      sources:
+        journal_logs:
+          type: journald
+          journal_directory: /var/log/journal
+        kubernetes_logs:
+          type: kubernetes_logs
+          pod_annotation_fields:
+            container_image: "container_image"
+            container_name: "container_name"
+            pod_annotations: "pod_annotations"
+            pod_labels: "pod_labels"
+            pod_name: "pod_name"
+        vector_metrics:
+          type: internal_metrics
+      # Sinks
+      sinks:
+        loki_journal_sink:
+          type: vector
+          inputs:
+            - journal_logs
+          address: vector-aggregator:6000
+          version: "2"
+        loki_kubernetes_sink:
+          type: vector
+          inputs:
+            - kubernetes_logs
+          address: vector-aggregator:6010
+          version: "2"
     service:
-      main:
-        enabled: false
-    probes:
-      liveness:
-        enabled: false
-      readiness:
-        enabled: false
-      startup:
-        enabled: false
-    serviceAccount:
-      create: true
-      name: vector-agent
+      enabled: false
     securityContext:
       privileged: true
-    persistence:
-      config:
-        enabled: true
-        type: configMap
-        name: vector-agent-configmap # overriden by kustomizeconfig
-        subPath: vector.yaml
-        mountPath: /etc/vector/vector.yaml
-        readOnly: true
-      data:
-        enabled: true
-        type: emptyDir
-        mountPath: /vector-data-dir
-      var-log:
-        enabled: true
-        type: hostPath
-        hostPath: /var/log
-        hostPathType: Directory
-        mountPath: /var/log
-        readOnly: true
-      var-lib:
-        enabled: true
-        type: hostPath
-        hostPath: /var/lib
-        hostPathType: Directory
-        mountPath: /var/lib
-        readOnly: true
-      procfs:
-        enabled: true
-        type: hostPath
-        hostPath: /proc
-        hostPathType: Directory
-        mountPath: /host/proc
-        readOnly: true
-      sysfs:
-        enabled: true
-        type: hostPath
-        hostPath: /sys
-        hostPathType: Directory
-        mountPath: /host/sys
-        readOnly: true
+    tolerations:
+      - effect: NoSchedule
+        operator: Exists
+      - effect: NoExecute
+        operator: Exists
