--- a/kubernetes/flux/repositories/helm/vector.yaml
+++ b/kubernetes/flux/repositories/helm/vector.yaml
@@ -2,7 +2,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta1
 kind: HelmRepository
 metadata:
-  name: vector-charts
+  name: vector
   namespace: flux-system
 spec:
   interval: 15m
