--- a/kubernetes/apps/monitoring/vector/agent/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/vector/agent/helmrelease.yaml
@@ -3,7 +3,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: vector-agent
-  namespace: observability
+  namespace: monitoring
 spec:
   interval: 15m
   chart:
@@ -12,7 +12,7 @@ spec:
       version: 0.20.0
       sourceRef:
         kind: HelmRepository
-        name: vector-charts
+        name: vector
         namespace: flux-system
       interval: 15m
   install:
@@ -24,7 +24,7 @@ spec:
       retries: 5
   dependsOn:
     - name: vector-aggregator
-      namespace: observability
+      namespace: monitoring
   values:
     # Original content copied from here with edits to remove prometheus and opensense
     # https://github.com/onedr0p/home-ops/blob/e9a0bad87512024e6c824ca9d0890bd051dda14b/cluster/apps/monitoring/vector/agent/helm-release.yaml
