--- a/kubernetes/apps/monitoring/vector/aggregator/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/vector/aggregator/helmrelease.yaml
@@ -2,77 +2,117 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: &app vector-aggregator
+  name: vector-aggregator
   namespace: monitoring
 spec:
   interval: 15m
   chart:
     spec:
-      chart: app-template
-      version: 1.2.1
+      chart: vector
+      version: 0.20.0
       sourceRef:
         kind: HelmRepository
-        name: bjw-s
+        name: vector
         namespace: flux-system
-  maxHistory: 3
+      interval: 15m
   install:
     createNamespace: true
     remediation:
-      retries: 3
+      retries: 5
   upgrade:
-    cleanupOnFail: true
     remediation:
-      retries: 3
-  uninstall:
-    keepHistory: false
+      retries: 5
+  dependsOn:
+    - name: loki
+      namespace: monitoring
   values:
-    controller:
-      replicas: 3
-      strategy: RollingUpdate
-      annotations:
-        reloader.stakater.com/auto: "true"
+    # Original Content copied from here with edits to remove prometheus setup and opensense
+    # https://github.com/onedr0p/home-ops/blob/e9a0bad87512024e6c824ca9d0890bd051dda14b/cluster/apps/monitoring/vector/aggregator/helm-release.yaml
     image:
-      repository: docker.io/timberio/vector
-      tag: 0.27.0-debian
-    args: ["--config", "/etc/vector/vector.yaml"]
+      repository: timberio/vector
+      tag: 0.28.0-debian
+    role: Stateless-Aggregator
+    customConfig:
+      data_dir: /vector-data-dir
+      api:
+        enabled: false
+      #
+      # Sources
+      #
+      sources:
+        journal_logs:
+          type: vector
+          address: 0.0.0.0:6000
+          version: "2"
+        kubernetes_logs:
+          type: vector
+          address: 0.0.0.0:6010
+          version: "2"
+      #
+      # Transformations
+      #
+      transforms:
+        kubernetes_logs_remap:
+          type: remap
+          inputs:
+            - kubernetes_logs
+          source: |
+            # Standardize 'app' index
+            .custom_app_name = .pod_labels."app.kubernetes.io/name" || .pod_labels.app || .pod_labels."k8s-app" || "unknown"
+      #
+      # Sinks
+      #
+      sinks:
+        loki_journal:
+          type: loki
+          inputs:
+            - journal_logs
+          endpoint: http://loki:3100
+          encoding:
+            codec: json
+          batch:
+            max_bytes: 2049000
+          out_of_order_action: accept
+          remove_label_fields: true
+          remove_timestamp: true
+          labels:
+            hostname: >-
+              {{`{{ host }}`}}
+        loki_kubernetes:
+          type: loki
+          inputs:
+            - kubernetes_logs_remap
+          endpoint: http://loki:3100
+          encoding:
+            codec: json
+          batch:
+            max_bytes: 2049000
+          out_of_order_action: accept
+          remove_label_fields: true
+          remove_timestamp: true
+          labels:
+            app: >-
+              {{`{{ custom_app_name }}`}}
+            namespace: >-
+              {{`{{ kubernetes.pod_namespace }}`}}
+            node: >-
+              {{`{{ kubernetes.pod_node_name }}`}}
+    replicas: 3
+    # env:
+    #   - name: VECTOR_LOG
+    #     value: debug
     service:
-      main:
-        type: LoadBalancer
-        externalIPs: ["${SVC_SYSLOG_ADDR}"]
-        externalTrafficPolicy: Local
-        ports:
-          http:
-            port: 8686
-          journald-logs:
-            enabled: true
-            port: 6000
-          kubernetes-logs:
-            enabled: true
-            port: 6010
-          opnsense-logs:
-            enabled: true
-            port: 5140
-            protocol: UDP
-    persistence:
-      config:
-        enabled: true
-        type: configMap
-        name: vector-aggregator-configmap
-        subPath: vector.yaml
-        mountPath: /etc/vector/vector.yaml
-        readOnly: true
-      data:
-        enabled: true
-        type: emptyDir
-        mountPath: /vector-data-dir
-      geoip:
-        enabled: true
-        type: emptyDir
-        mountPath: /usr/share/GeoIP
-    topologySpreadConstraints:
-      - maxSkew: 1
-        topologyKey: kubernetes.io/hostname
-        whenUnsatisfiable: DoNotSchedule
-        labelSelector:
-          matchLabels:
-            app.kubernetes.io/name: *app
+      enabled: true
+      type: LoadBalancer
+    affinity:
+      podAntiAffinity:
+        preferredDuringSchedulingIgnoredDuringExecution:
+          - weight: 100
+            podAffinityTerm:
+              labelSelector:
+                matchExpressions:
+                  - key: app.kubernetes.io/component
+                    operator: In
+                    values:
+                      - Stateless-Aggregator
+              topologyKey: kubernetes.io/hostname
